# agent-catalog

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  agent-catalog-additional-notices.txt  agent_catalog_additional-notices.txt  analysis.html  api.html  catalog.html  cli.html  concept.html  config.html  description.md  entry.html  env.html  faqs.html  genindex.html  guide.html  index.html  install.html  log.html  objects.inv  provider.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  tutorial.html
_modules/: index.html
examples/with_fastapi/: .agentcignore  .env.example  README.md  edge.py  graph.py  node.py  pyproject.toml  server.py
examples/with_fastapi/prompts/: front_desk.yaml
examples/with_fastapi/tests/: test_e2e.sh
examples/with_fastapi/tools/: find_layover_flights.py
examples/with_langgraph/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  edge.py  graph.py  main.py  node.py  pyproject.toml  test.py
examples/with_langgraph/evals/: eval_goal_accuracy.py  eval_short.py  eval_topic_adherence.py
examples/with_langgraph/evals/resources/: irrelevant.jsonl  relevant.jsonl  short-thread.jsonl
examples/with_langgraph/prompts/: endpoint_finding.yaml  front_desk.yaml  route_finding.yaml
examples/with_langgraph/tests/: test_e2e.sh  test_topic_adherence.py
examples/with_langgraph/tests/resources/: irrelevant.jsonl
examples/with_langgraph/tools/: find_direct_flights.sqlpp  find_layover_flights.py
examples/with_notebook/: .env.example  .pre-commit-config.yaml  README.md  charter.yaml  pyproject.toml  researcher.ipynb  researcher.yaml  tools.py
examples/with_notebook/tests/: test_e2e.sh
libs/agent_catalog_libs/: README.md  __init__.py  pyproject.toml
libs/agent_catalog_libs/cmd/: defaults.py  main.py
libs/agent_catalog_libs/cmd/cmds/: clean.py  env.py  execute.py  find.py  index.py  publish.py  status.py  util.py  version.py
libs/agent_catalog_libs/core/: __init__.py
libs/agent_catalog_libs/core/catalog/: descriptor.py  index.py  version.py
libs/agent_catalog_libs/core/provider/: loader.py  provider.py  refiner.py
libs/agent_catalog_libs/core/tool/: decorator.py
libs/agent_catalog_libs/tests/cmd/: test_click.py
libs/agent_catalog_libs/util/: ddl.py
libs/agentc/: description.md  pyproject.toml
libs/agentc/agentc/: __init__.py  auditor.py  langchain.py  provider.py
libs/agentc/agentc/cmd/: __init__.py
libs/agentc/agentc/scope/: __init__.py
libs/agentc/agentc/span/: __init__.py
libs/agentc/tests/: test_auditor.py  test_provider.py
libs/agentc_cli/: README.md  pyproject.toml
libs/agentc_cli/agentc_cli/: main.py  util.py
libs/agentc_cli/agentc_cli/cmds/: __init__.py  add.py  clean.py  env.py  evaluate.py  execute.py  find.py  index.py  init.py  ls.py  publish.py  status.py  util.py  version.py
libs/agentc_cli/agentc_cli/models/: context.py  db_status.py  find.py
libs/agentc_cli/tests/: conftest.py  couchbase_server_start.sh  test_click.py
libs/agentc_core/: README.md  pyproject.toml
libs/agentc_core/agentc_core/: __init__.py  defaults.py
libs/agentc_core/agentc_core/activity/: __init__.py  scope.py  span.py
libs/agentc_core/agentc_core/analytics/: __init__.py  content.py  create.py  log.py
libs/agentc_core/agentc_core/catalog/: __init__.py  catalog.py  descriptor.py  directory.py  index.py  version.py
libs/agentc_core/agentc_core/config/: __init__.py  config.py
libs/agentc_core/agentc_core/embedding/: embedding.py
libs/agentc_core/agentc_core/indexer/: indexer.py
libs/agentc_core/agentc_core/inputs/: models.py
libs/agentc_core/agentc_core/learned/: embedding.py  model.py
libs/agentc_core/agentc_core/prompt/: models.py
libs/agentc_core/agentc_core/provider/: __init__.py  loader.py  provider.py  refiner.py
libs/agentc_core/agentc_core/record/: descriptor.py  helper.py
libs/agentc_core/agentc_core/remote/: init.py  publish.py
libs/agentc_core/agentc_core/tool/: decorator.py
libs/agentc_core/agentc_core/util/: connection.py  ddl.py  models.py  publish.py
libs/agentc_core/agentc_core/version/: identifier.py
libs/agentc_core/tests/: README.md  conftest.py
libs/agentc_core/tests/activity/: test_activity.py
libs/agentc_core/tests/annotation/: test_annotation_string.py
libs/agentc_core/tests/catalog/: test_catalog_version.py  test_provider.py  test_scan_dir.py
libs/agentc_core/tests/config/: test_config.py
libs/agentc_core/tests/embedding/: test_embedding_local.py  test_embedding_openai.py
libs/agentc_core/tests/index/: test_index.py
libs/agentc_core/tests/model_input/: test_model_input_validator.py
libs/agentc_core/tests/prompt/: test_prompt_validator.py
libs/agentc_core/tests/tool/: test_find_refiner.py  test_tool_generator.py  test_tool_validator.py
libs/agentc_integrations/langchain/: pyproject.toml
libs/agentc_integrations/langchain/agentc_langchain/: __init__.py  defaults.py
libs/agentc_integrations/langchain/tests/: conftest.py  test_cache.py  test_chat.py
libs/agentc_integrations/langgraph/: pyproject.toml
libs/agentc_integrations/langgraph/agentc_langgraph/: __init__.py
libs/agentc_integrations/langgraph/tests/: conftest.py  test_state.py
libs/agentc_integrations/llamaindex/: pyproject.toml
libs/agentc_integrations/llamaindex/agentc_llamaindex/: __init__.py
libs/agentc_integrations/llamaindex/tests/: conftest.py  test_callback.py
libs/agentc_langchain/: README.md  pyproject.toml
libs/agentc_langchain/agentc_langchain/: __init__.py  defaults.py
libs/agentc_langchain/examples/: example_agent.py
libs/agentc_testing/: README.md  pyproject.toml
libs/agentc_testing/agentc_testing/: catalog.py  directory.py  repo.py  server.py
libs/agentc_testing/scripts/: download_model.py
parent/: pyproject.toml
templates/agents/with_controlflow/: .env.example  .gitignore  Makefile  README.md  agent.py  notebook.ipynb  pyproject.toml  requirements.txt
templates/agents/with_langgraph/: .env.example  Makefile  README.md  agent.ipynb  pyproject.toml
(+805 files in other folders)
