[tool.poetry]
name = "agent-catalog"
version = "0.0.1"
description = "The mono-repo for the Couchbase Agent Catalog project."
repository = "https://github.com/couchbaselabs/agent-catalog"
authors = [
    "Glenn Galvizo <glenn.galvizo@couchbase.com>",
    "Tanvi Johari <tanvi.johari@couchbase.com>",
    "Steve Yen <steve.yen@couchbase.com>",
    "Thejas N U <thejas.nu@couchbase.com>"
]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# All of our Agent Catalog packages.
agentc = { path = "libs/agentc", develop = true }
agentc-core = { path = "libs/agentc_core", develop = true }
agentc-cli = { path = "libs/agentc_cli", develop = true }
agentc-langchain = { path = "libs/agentc_langchain", develop = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^8.3.2"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-copybutton = "^0.5.2"
sphinx-hoverxref = "^1.4.1"
linkify-it-py = "^2.0.3"
sphinx-autobuild = "^2024.10.3"
autodoc-pydantic = "^2.2.0"
sphinx-click = "^6.0.0"
furo = "^2024.8.6"

[tool.ruff]
line-length = 120
lint.select = ["F", "B", "I", "SIM"]
show-fixes = true

[tool.ruff.lint.isort]
no-sections = true
force-single-line = true
lines-between-types = 1
force-wrap-aliases = true
split-on-trailing-comma = false

[tool.pytest.ini_options]
markers = [
    "smoke: marks smoke tests for running on each git-push"
]
testpaths = [
    "libs/agentc_core/tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
