[project]
name = "agent-catalog"
description = "The mono-repo for the Couchbase Agent Catalog project."
authors = [
    { name = "Glenn Galvizo", email = "glenn.galvizo@couchbase.com" },
    { name = "Tanvi Johari", email = "tanvi.johari@couchbase.com" },
    { name = "Steve Yen", email = "steve.yen@couchbase.com" },
    { name = "Thejas N U", email = "thejas.nu@couchbase.com" }
]
license = "Apache-2.0"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.12"

[project.urls]
repository = "https://github.com/couchbaselabs/agent-catalog"
documentation = "https://couchbaselabs.github.io/agent-catalog/index.html"

# Version is dynamically pulled from Git.
[tool.poetry]
name = "agent-catalog"
version = "0.0.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# All of our Agent Catalog packages.
agentc = { path = "libs/agentc", develop = true }
agentc-core = { path = "libs/agentc_core", develop = true }
agentc-cli = { path = "libs/agentc_cli", develop = true }
agentc-langchain = { path = "libs/agentc_integrations/langchain", develop = true }
agentc-langgraph = { path = "libs/agentc_integrations/langgraph", develop = true }
agentc-llamaindex = { path = "libs/agentc_integrations/llamaindex", develop = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^8.3.2"
pytest-retry = "^1.7.0"

# An internal testing package for the Agent Catalog.
[tool.poetry.group.dev.dependencies.agentc-testing]
path = "libs/agentc_testing"
develop = true

# To build our docs.
[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
sphinx-copybutton = "^0.5.2"
sphinx-hoverxref = "^1.4.1"
linkify-it-py = "^2.0.3"
sphinx-autobuild = "^2024.10.3"
sphinxcontrib-mermaid = "^1.0.0"
autodoc-pydantic = "^2.2.0"
piccolo_theme = "^0.24.0"
sphinx_design = "^0.6.1"
enum-tools = { version = "^0.12.0", extras = ["sphinx"] }
click_extra = { version = "^4.15.0", extras = ["sphinx"] }

# All packages for our examples (mainly here for convenience).
[tool.poetry.group.examples.dependencies]
langgraph = "^0.5.1"
ragas = "^0.2.15"
jupyterlab = "^4.3.5"
ipywidgets = "^8.1.5"

[tool.ruff]
line-length = 120
lint.select = ["F", "B", "I", "SIM"]
show-fixes = true

[tool.ruff.lint.isort]
no-sections = true
force-single-line = true
lines-between-types = 1
force-wrap-aliases = true
split-on-trailing-comma = false

[tool.pytest.ini_options]
markers = [
    "smoke: marks smoke tests for running on each git-push",
    "slow: marks slow tests for running on each git-push",
]
testpaths = [
    "libs/agentc_core/tests",
    "libs/agentc_cli/tests",
    "libs/agentc_integrations/langchain/tests",
    "libs/agentc_integrations/llamaindex/tests",
    "libs/agentc_integrations/langgraph/tests"
]
# addopts = "--retries 5 --retry-delay 300"
norecursedirs = [
    "examples"
]

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {{- base -}}
    {%- if stage is not none and revision is not none -%}
        {{ stage }}{{ revision }}
    {%- endif -%}
    {%- if distance > 0 -%}
        .post{{ distance }}
    {%- endif -%}
"""  # +g{{ commit }}"

[tool.poetry-dynamic-versioning.substitution]
files = [
    "libs/agentc/agentc/__init__.py",
    "libs/agentc_cli/agentc_cli/__init__.py",
    "libs/agentc_core/agentc_core/__init__.py",
    "libs/agentc_integrations/langchain/agentc_langchain/__init__.py",
    "libs/agentc_integrations/langgraph/agentc_langgraph/__init__.py",
    "libs/agentc_integrations/llamaindex/agentc_llamaindex/__init__.py",
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[build-system]
requires = [
    "poetry-core>=2.1.0",
    "poetry-dynamic-versioning>=1.8.2"
]
build-backend = "poetry_dynamic_versioning.backend"
