[tool.poetry]
name = "agent_catalog"
version = "0.1.0"
description = "Parent package for agent-catalog."
authors = ["Tanvi Johari <tanvi.johari@couchbase.com>"]
package-mode = false

# Python version for the whole monorepo
[tool.poetry.dependencies]
python = "^3.12"

agent-catalog-libs = { path = "./libs", develop=true }

# Group dependencies for development tools (optional)
[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"