[tool.poetry]
name = "with-notebook-example"
version = "0.2.0"
description = "A starter agent built with Couchbase Agent Catalog and LangGraph in Jupyter Notebook."
repository = "https://github.com/couchbaselabs/agent-catalog"
authors = [
    "Tanvi Johari <tanvi.johari@couchbase.com>",
    "Thejas N U <thejas.nu@couchbase.com>",
    "Glenn Galvizo <glenn.galvizo@couchbase.com>"
]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.3.7"
couchbase = "^4.3.5"

# For Google Search.
serpapi = "^0.1.5"
google_search_results = "^2.4.2"

# For our graphs (+ Jupyter notebook).
ipython = "^8.27.0"
langchain-community = "^0.3.10"
langchain-experimental = "^0.3.3"
matplotlib = "^3.9.3"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

# TODO (GLENN): Replace this with the PyPI package once it's available.
# The agentc project (the front-facing parts)!
notebook = "^7.4.0"
[tool.poetry.dependencies.agentc]
path = "../../libs/agentc"
develop = true

[tool.poetry.dependencies.agentc_langchain]
path = "../../libs/agentc_integrations/langchain"
develop = true

[tool.poetry.dependencies.agentc_langgraph]
path = "../../libs/agentc_integrations/langgraph"
develop = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"

[tool.ruff]
line-length = 120
lint.select = ["F", "B", "I", "SIM"]
show-fixes = true

[tool.ruff.lint.isort]
no-sections = true
force-single-line = true
lines-between-types = 1
force-wrap-aliases = true
split-on-trailing-comma = false

[build-system]
requires = ["poetry-core>=2.1.0"]
build-backend = "poetry.core.masonry.api"
