[tool.poetry]
name = "agentc"
version = "0.2.0"
description = "The front-facing package for the Couchbase Agent Catalog project."
repository = "https://github.com/couchbaselabs/agent-catalog"
authors = [
    "Glenn Galvizo <glenn.galvizo@couchbase.com>",
    "Tanvi Johari <tanvi.johari@couchbase.com>",
    "Thejas N U <thejas.nu@couchbase.com>"
]
packages = [
    { include = "agentc" },
]

[tool.poetry.urls]
Homepage = "https://couchbase.com"
Documentation = "https://docs.couchbase.com"
Repository = "https://github.com/couchbaselabs/agent-catalog"

[tool.poetry.scripts]
agentc = "agentc.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.1"

[tool.poetry.dependencies.agentc-core]
path = "../agentc_core"
develop = true

[tool.poetry.dependencies.agentc-cli]
path = "../agentc_cli"
develop = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies.agentc-testing]
path = "../agentc_testing"
develop = true

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests for running on each git-push",
    "slow: marks slow tests for running on each git-push",
]

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../../"
version-pinning-rule = '=='

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
