[project]
name = "agentc"
description = "The front-facing package for the Couchbase Agent Catalog project."
authors = [
    { name = "Glenn Galvizo", email = "glenn.galvizo@couchbase.com" },
    { name = "Tanvi Johari", email = "tanvi.johari@couchbase.com" },
    { name = "Thejas N U", email = "thejas.nu@couchbase.com" }
]
license = "Apache-2.0"
dynamic = ["version"]
requires-python = ">=3.12"

[project.urls]
repository = "https://github.com/couchbaselabs/agent-catalog"
documentation = "https://couchbaselabs.github.io/agent-catalog/index.html"

[project.scripts]
agentc = "agentc.__main__:main"

# Version is dynamically pulled from Git.
[tool.poetry]
name = "agentc"
version = "0.0.0"
packages = [
    { include = "agentc" },
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.1"

# The version of these packages will be updated dynamically.
agentc-core = { path = "../agentc_core", develop = true }
agentc-cli = { path = "../agentc_cli", develop = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies.agentc-testing]
path = "../agentc_testing"
develop = true

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests for running on each git-push",
    "slow: marks slow tests for running on each git-push",
]

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../../"
version-pinning-rule = '=='

[tool.poetry-dynamic-versioning]
enable = false
format = "v{major}.{minor}.{patch}+{commit}"

[tool.poetry.requires-plugins]
poetry-monoranger-plugin = ">=0.4.1"
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[build-system]
requires = [
    "poetry-core>=2.1.0",
    "poetry-dynamic-versioning>=1.8.2"
]
build-backend = "poetry_dynamic_versioning.backend"
