[project]
name = "agentc"
description = "The front-facing package for the Couchbase Agent Catalog project."
authors = [
    { name = "Glenn Galvizo", email = "glenn.galvizo@couchbase.com" },
    { name = "Tanvi Johari", email = "tanvi.johari@couchbase.com" },
    { name = "Thejas N U", email = "thejas.nu@couchbase.com" }
]
license = "Apache-2.0"
dynamic = ["version"]
requires-python = ">=3.11,<3.14"

[project.urls]
repository = "https://github.com/couchbaselabs/agent-catalog"
documentation = "https://couchbaselabs.github.io/agent-catalog/index.html"

[project.scripts]
agentc = "agentc.__main__:main"

# Version is dynamically pulled from Git.
[tool.poetry]
name = "agentc"
version = "0.0.0"
packages = [
    { include = "agentc" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pydantic-settings = "^2.7.1"

# The version of these packages will be updated dynamically.
agentc-core = { path = "../agentc_core", develop = true }
agentc-cli = { path = "../agentc_cli", develop = true }
agentc-langchain = { path = "../agentc_integrations/langchain", develop = true, optional = true }
agentc-langgraph = { path = "../agentc_integrations/langgraph", develop = true, optional = true }
agentc-llamaindex = { path = "../agentc_integrations/llamaindex", develop = true, optional = true }

# TODO (GLENN): At some point we need to migrate to PEP508.
[tool.poetry.extras]
langchain = ["agentc_langchain"]
langgraph = ["agentc_langgraph"]
llamaindex = ["agentc_llamaindex"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies.agentc-testing]
path = "../agentc_testing"
develop = true

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests for running on each git-push",
    "slow: marks slow tests for running on each git-push",
]

[build-system]
requires = [
    "poetry-core>=2.1.0"
]
build-backend = "poetry.core.masonry.api"
