[tool.poetry]
name = "agentc-cli"
version = "0.2.0"
description = "The command line interface for the Couchbase Agent Catalog project."
repository = "https://github.com/couchbaselabs/rosetta-core"
authors = [
    "Glenn Galvizo <glenn.galvizo@couchbase.com>",
    "Steve Yen <steve.yen@couchbase.com>",
    "Tanvi Johari <tanvi.johari@couchbase.com>",
    "Thejas N U <thejas.nu@couchbase.com>"
]
packages = [
    { include = "agentc_cli" },
]

[tool.poetry.urls]
Homepage = "https://couchbase.com"
Documentation = "https://docs.couchbase.com"
Repository = "https://github.com/couchbaselabs/agent-catalog"

[tool.poetry.scripts]
agentc = "agentc_cli.main:main"

[tool.poetry.dependencies]
python = "^3.12"
click-extra = "^4.15.0"
tqdm = "^4.66.5"

[tool.poetry.dependencies.agentc-core]
path = "../agentc_core"
develop = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^8.3.2"
pytest-retry = "^1.7.0"

[tool.poetry.group.dev.dependencies.agentc-testing]
path = "../agentc_testing"
develop = true

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests for running on each git-push",
    "slow: marks slow tests for running on each git-push",
]

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../../"
version-pinning-rule = '=='

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
