[tool.poetry]
name = "agentc-testing"
version = "0.2.0"
description = "An internal library for running agent-catalog tests."
repository = "https://github.com/couchbaselabs/agent-catalog"
authors = [
    "Glenn Galvizo <glenn.galvizo@couchbase.com>",
    "Tanvi Johari <tanvi.johari@couchbase.com>"
]
packages = [
    { include = "agentc_testing" },
]

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.2.2"
pytest = "^8.3.2"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies.agentc-cli]
path = "../agentc_cli"
develop = true

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests for running on each git-push",
    "slow: marks slow tests for running on each git-push",
]

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../../"
version-pinning-rule = '=='

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
