[project]
name = "agentc-testing"
description = "An internal library for running agent-catalog tests."
authors = [
    { name = "Glenn Galvizo", email = "glenn.galvizo@couchbase.com" },
    { name = "Tanvi Johari", email = "tanvi.johari@couchbase.com" },
]
license = "Apache-2.0"
dynamic = ["version"]
requires-python = ">=3.12"

[tool.poetry]
name = "agentc-testing"
version = "0.0.0"
packages = [
    { include = "agentc_testing" },
]

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.2.2"
pytest = "^8.3.2"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies.agentc-cli]
path = "../agentc_cli"
develop = true

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests for running on each git-push",
    "slow: marks slow tests for running on each git-push",
]

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../../"
version-pinning-rule = '=='

[tool.poetry-dynamic-versioning]
enable = true
format = "v{major}.{minor}.{patch}+{commit}"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[build-system]
requires = [
    "poetry-core>=2.1.0",
    "poetry-dynamic-versioning>=1.8.2"
]
build-backend = "poetry_dynamic_versioning.backend"
