[project]
name = "agentc-testing"
description = "An internal library for running agent-catalog tests."
authors = [
    { name = "Glenn Galvizo", email = "glenn.galvizo@couchbase.com" },
    { name = "Tanvi Johari", email = "tanvi.johari@couchbase.com" },
]
license = "Apache-2.0"
dynamic = ["version"]
requires-python = ">=3.11"

[tool.poetry]
name = "agentc-testing"
version = "0.0.0"
packages = [
    { include = "agentc_testing" },
]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.2.2"
pytest = "^8.3.2"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies.agentc-cli]
path = "../agentc_cli"
develop = true

[tool.pytest.ini_options]
markers = [
    "smoke: marks tests for running on each git-push",
    "slow: marks slow tests for running on each git-push",
]

[build-system]
requires = [
    "poetry-core>=2.1.0"
]
build-backend = "poetry.core.masonry.api"
