[tool.poetry]
name = "agentc-langchain"
version = "0.0.1"
description = "Collection of LangChain-specific classes and functions used with the Couchbase Agent Catalog project."
authors = [
  "Kush Khanna <kush.khanna@couchbase.com>",
  "Glenn Galvizo <glenn.galvizo@couchbase.com>"
]
packages = [
  { include = "agentc_langchain" }
]

[tool.poetry.urls]
Homepage = "https://couchbase.com"
Documentation = "https://docs.couchbase.com"
Repository = "https://github.com/couchbaselabs/agent-catalog"

[tool.poetry.dependencies]
python = "^3.12"
couchbase = "^4.3.0"
joblib = "^1.4.2"
langchain = ">=0.2.12"
langchain-core = ">=0.2.28"
langchain-openai = ">=0.1.20"
langchain_couchbase = "^0.2.4"
pydantic = "^2.10.6"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.7.1"

[tool.poetry.dependencies.agentc-core]
path = "../../agentc_core"
develop = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

# Note: we only depend on the CLI for tests.
[tool.poetry.group.dev.dependencies.agentc-cli]
path = "../../agentc_cli"
develop = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
