[project]
name = "agentc-langchain"
description = "Collection of LangChain-specific classes and functions used with the Couchbase Agent Catalog project."
authors = [
    { name = "Kush Khanna", email = "kush.khanna@couchbase.com" },
    { name = "Glenn Galvizo", email = "glenn.galvizo@couchbase.com" },
]
license = "Apache-2.0"
dynamic = ["version"]
requires-python = ">=3.12"

[project.urls]
repository = "https://github.com/couchbaselabs/agent-catalog"
documentation = "https://couchbaselabs.github.io/agent-catalog/api.html#langchain-langgraph"

# Version is dynamically pulled from Git.
[tool.poetry]
name = "agentc-langchain"
version = "0.0.0"
packages = [
  { include = "agentc_langchain" }
]

[tool.poetry.dependencies]
python = "^3.12"
couchbase = "^4.3.6"
joblib = "^1.4.2"
langchain = ">=0.3.26"
langchain-core = ">=0.3.68"
langchain-openai = ">=0.1.25"
langchain_couchbase = "^0.2.5"
pydantic = "^2.10.7"
requests = "^2.32.3"
pydantic-settings = "^2.7.1"

# The version of this package will be updated dynamically.
agentc-core = { path = "../../agentc_core", develop = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
pytest = "^8.3.2"
pytest-retry = "^1.7.0"

# Note: we only depend on the CLI for tests.
[tool.poetry.group.dev.dependencies.agentc-cli]
path = "../../agentc_cli"
develop = true

[build-system]
requires = [
    "poetry-core>=2.1.0"
]
build-backend = "poetry.core.masonry.api"
